fix nav positioning and alignment
fixed the nav containers alignments, and made sticky act correctly for each breakpoint

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ body {
 }
 
 nav {
-  background-color: #f72210;
   height: 50px;
 }
 
@@ -20,10 +19,16 @@ input {
   width: 60px;
 }
 
+#topNav {
+  z-index: 5;
+  position: relative;
+}
+
 .navRow {
   display: flex;
   align-items: center;
   height: 100%;
+  background-color: #f72210;
 }
 
 #navDate {
@@ -36,7 +41,8 @@ input {
   display: flex;
 }
 
-.logoDiv {
+.logoDiv,
+.stickyLogoDiv {
   width: 132px;
   height: 20px;
   background-image: url(./images/logoSmall.PNG);
@@ -44,7 +50,19 @@ input {
   background-position: center;
 }
 
-#navButtons {
+#stickyNav {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+}
+
+#stickyNav #navLogo{
+  justify-content: flex-start;
+  align-items: center;
+}
+
+#navButtons,
+#stickyNavButtons {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
@@ -62,12 +80,20 @@ input {
   padding: 10px 5px;
 }
 
-#navButtons button {
+#navButtons button,
+#stickyNavButtons button {
   border: 1px solid red;
   height: 25px;
   font-weight: bolder;
   color: red;
   margin: auto 20px auto 10px;
+}
+
+#stickyNav {
+  background-color: #f72210;
+  height: 50px;
+  width: 100%;
+  max-width: 1311px;
 }
 
 .fullFigure img {
@@ -128,7 +154,8 @@ input {
   width: 260px;
 }
 
-#navButtons img {
+#navButtons img,
+#stickyNavButtons img {
   width: 30px;
   height: 30px;
 }
@@ -235,8 +262,10 @@ nav,
 
 #mainContent {
   background-color: white;
-  margin-top: 3px;
   padding-top: 15px;
+  position: relative;
+  top: 45px;
+  margin-bottom: 50px;
 }
 
 .fullFigure {
@@ -262,6 +291,14 @@ div h1:first-child:hover {
   font-size: 0.8em;
   margin-bottom: 7px;
   color: rgba(3, 3, 3, 0.4);
+}
+
+#left {
+  z-index: 0;
+}
+
+#right {
+  z-index: 0;
 }
 
 .genreTag {
@@ -770,6 +807,7 @@ div h1:first-child:hover {
 /* BIT BIGGER */
 
 @media only screen and (max-width: 461px) {
+  
   .logoDiv {
     min-width: 122px;
   }
@@ -806,14 +844,9 @@ div h1:first-child:hover {
 /* MED */
 
 @media only screen and (max-width: 767px) {
-  nav {
-    position: fixed;
-    top: 0;
-  }
 
-  main {
-    position: relative;
-    top: 50px;
+  #stickyNav {
+    z-index: 5;
   }
 
   footer {
@@ -832,7 +865,7 @@ div h1:first-child:hover {
   }
 }
 
-@media only screen and (min-width: 767px) and (max-width: 991px) {
+@media only screen and (min-width: 767px) and (max-width: 991px) {  
   /* EDITOR'S PICKS */
 
   .editorsPick .genreArticle {
@@ -858,6 +891,15 @@ div h1:first-child:hover {
 }
 
 @media only screen and (min-width: 768px) {
+
+  #stickyNav {
+    z-index: 5;
+  }
+
+  .sticker {
+    position: fixed;
+  }
+
   .moreStories img {
     width: 135px;
     height: 90px;
@@ -908,6 +950,14 @@ div h1:first-child:hover {
   }
 }
 
+@media only screen and (max-width: 991px) {
+
+  #mainContent {
+    top: 0;
+  }
+
+}
+
 /* LARGE */
 
 @media only screen and (min-width: 992px) {
@@ -915,6 +965,8 @@ div h1:first-child:hover {
 
   nav {
     height: 95px;
+    position: relative;
+    top: 0;
   }
 
   .logoDiv {
@@ -946,16 +998,18 @@ div h1:first-child:hover {
     visibility: hidden;
   }
 
-  #whiteNav {
-    position: static;
+  #whiteNav,
+  #topNav {
+    position: relative;
     visibility: visible;
+    z-index: 5;
+  }
+
+  #stickyNav {
+    z-index: 1;
   }
 
   /* MAIN */
-
-  #mainContent {
-    margin-top: 56px;
-  }
 
   /* GENRE ARTICLES */
 
